Error fixed for the image not properly display with overflow property.

--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,9 @@ header{
 .projects .btn:hover{
     background: rgba(47, 48, 97,80%);
 }
+.project-item{
+    overflow: hidden;
+}
 .project-item img{
     float: left;
 }
